Update to setuptools
Signed-off-by: Logan Adams <loadams@microsoft.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,166 +1,9 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[project]
-name = "deepspeed"
-#dynamic = ["version"]
-version = {file = "version.txt"}
-description = "DeepSpeed library"
-readme = "README.md"
-license = "Apache Software License 2.0"
-authors = [
-    { name = "DeepSpeed Team", email = "deepspeed-info@microsoft.com" },
-]
-classifiers = [
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-]
-dependencies = [
-    "einops",
-    "hjson",
-    "msgpack",
+requires = [
+    "setuptools",
+    "wheel",
     "ninja",
-    "numpy",
-    "packaging>=20.0",
-    "psutil",
-    "py-cpuinfo",
-    "pydantic>=2.0.0",
-    "torch",
-    "tqdm",
+    "typing-extensions>=4.10.0",
 ]
-
-[project.optional-dependencies]
-1bit = []
-1bit_mpi = [
-    "mpi4py",
-]
-all = [
-    "accelerate",
-    "autodoc_pydantic>=2.0.0",
-    "clang-format==18.1.3",
-    "comet_ml>=3.41.0",
-    "deepspeed-kernels ; sys_platform == 'linux'",
-    "diffusers>=0.25.0",
-    "docutils<0.18",
-    "future",
-    "google",
-    "hjson",
-    "importlib-metadata>=4",
-    "lm-eval==0.3.0",
-    "mpi4py",
-    "mup",
-    "neural-compressor==2.1.0",
-    "packaging",
-    "pre-commit>=3.2.0",
-    "protobuf",
-    "psutil",
-    "py-cpuinfo",
-    "pydantic>=2.0.0",
-    "pytest-forked",
-    "pytest-randomly",
-    "pytest-xdist",
-    "pytest>=7.2.0",
-    "qtorch",
-    "qtorch==0.3.0",
-    "recommonmark",
-    "safetensors",
-    "sentencepiece",
-    "sphinx",
-    "sphinx-rtd-theme",
-    "sphinx_rtd_theme",
-    "tabulate",
-    "tensorboard",
-    "torch",
-    "torchvision",
-    "tqdm",
-    "transformers>=4.32.1",
-    "transformers>=4.39.0",
-    "triton==1.0.0",
-    "triton==2.1.0",
-    "triton>=2.1.0",
-    "wandb",
-    "xgboost",
-]
-autotuning = [
-    "tabulate",
-]
-autotuning_ml = [
-    "hjson",
-    "tabulate",
-    "xgboost",
-]
-dev = [
-    "accelerate",
-    "clang-format==18.1.3",
-    "comet_ml>=3.41.0",
-    "deepspeed-kernels ; sys_platform == 'linux'",
-    "docutils<0.18",
-    "future",
-    "importlib-metadata>=4",
-    "mup",
-    "pre-commit>=3.2.0",
-    "pytest-forked",
-    "pytest-randomly",
-    "pytest-xdist",
-    "pytest>=7.2.0",
-    "qtorch==0.3.0",
-    "recommonmark",
-    "sphinx",
-    "sphinx-rtd-theme",
-    "tensorboard",
-    "torchvision",
-    "transformers>=4.39.0",
-    "wandb",
-]
-inf = [
-    "google",
-    "lm-eval==0.3.0",
-    "protobuf",
-    "qtorch",
-    "safetensors",
-    "sentencepiece",
-    "transformers>=4.32.1",
-]
-readthedocs = [
-    "autodoc_pydantic>=2.0.0",
-    "docutils<0.18",
-    "hjson",
-    "packaging",
-    "psutil",
-    "py-cpuinfo",
-    "pydantic>=2.0.0",
-    "recommonmark",
-    "sphinx_rtd_theme",
-    "torch",
-    "tqdm",
-]
-sd = [
-    "diffusers>=0.25.0",
-    "triton>=2.1.0",
-]
-sparse = [
-    "neural-compressor==2.1.0",
-]
-sparse_attn = [
-    "triton==1.0.0",
-]
-triton = [
-    "triton==2.1.0",
-]
-
-[project.urls]
-Documentation = "https://deepspeed.readthedocs.io"
-Homepage = "http://deepspeed.ai"
-Source = "https://github.com/deepspeedai/DeepSpeed"
-
-#[tool.hatch.version]
-#path = "deepspeed/__init__.py"
-
-[tool.hatch.build.targets.sdist]
-include = [
-    "/deepspeed",
-]
+# Use legacy backend to import local packages in setup.py
+build-backend = "setuptools.build_meta:__legacy__"
