--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ requires = [
     "setuptools",
     "wheel",
     "ninja",
+    "torch",
     "typing-extensions>=4.10.0",
 ]
 # Use legacy backend to import local packages in setup.py
