--- a/.github/workflows/no-torch.yml
+++ b/.github/workflows/no-torch.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Build deepspeed
         run: |
-          DS_BUILD_STRING=" " python setup.py sdist
+          DS_BUILD_STRING=" " python -m build
 
       - name: Open GitHub issue if nightly CI fails
         if: ${{ failure() && (github.event_name == 'schedule') }}
