--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Build DeepSpeed
       run: |
         pip install setuptools
-        DS_BUILD_STRING=" " python setup.py sdist
+        DS_BUILD_STRING=" " python -m build
     - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
