--- a/.github/workflows/no-torch.yml
+++ b/.github/workflows/no-torch.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           pip uninstall torch --yes
           pip install setuptools
+          pip install build
           pip list
 
       - name: Build deepspeed
